<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.kotlin.training.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/themeColor"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_20_dp"
            app:cardCornerRadius="@dimen/padding_10_dp"
            app:cardElevation="@dimen/padding_10_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_20_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:labelFor="@id/et_username"
                        android:text="@string/username" />

                    <com.kotlin.training.view.uikit.UIEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_50_dp"
                        android:layout_marginTop="@dimen/padding_10_dp"
                        android:background="@drawable/rounded_background_grey"
                        android:drawableStart="@drawable/round_person"
                        android:drawablePadding="@dimen/padding_5_dp"
                        android:drawableTint="@color/themeColor"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingStart="@dimen/padding_5_dp"
                        android:paddingEnd="@dimen/padding_5_dp"
                        android:text="@={viewModel.name}"
                        android:textSize="@dimen/textSize_14_sp"></com.kotlin.training.view.uikit.UIEditText>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_20_dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:labelFor="@id/et_password"
                        android:text="@string/password" />

                    <com.kotlin.training.view.uikit.UIEditText

                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_50_dp"
                        android:background="@drawable/rounded_background_grey"
                        android:drawableStart="@drawable/round_lock"
                        android:drawablePadding="@dimen/padding_5_dp"
                        android:drawableTint="@color/themeColor"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_5_dp"
                        android:text="@={viewModel.password}"
                        android:textSize="@dimen/textSize_14_sp"></com.kotlin.training.view.uikit.UIEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_50_dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/padding_10_dp"
                    android:accessibilityHeading="true"
                    android:accessibilityLiveRegion="polite"
                    android:paddingEnd="@dimen/padding_10_dp"
                    android:paddingStart="@dimen/padding_10_dp"
                    android:text="@string/remember_me"></androidx.appcompat.widget.AppCompatCheckBox>

                <com.kotlin.training.view.uikit.UIButton
                    android:id="@+id/btn_login"
                    android:layout_width="@dimen/width_200_dp"
                    android:layout_height="@dimen/height_50_dp"
                    android:layout_margin="@dimen/padding_20_dp"
                    android:onClick="@{() -> viewModel.login(viewModel.name,viewModel.password)}"
                    android:text="@string/login"
                    android:textColor="@android:color/white"></com.kotlin.training.view.uikit.UIButton>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
